[package]
name = "lilypond-grpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lilypond-grpc"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
prost = "0.14.3"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
uuid = "1.22.0"

[build-dependencies]
tonic-prost-build = "0.14.5"
